# esi-auth

./: .gitignore  .test.env  AGENTS.md  CHANGELOG.md  README.OLD.md  README.md  pyproject.toml
.github/agents/: Reviewer.agent.md
changelog.d/: 20251129_075945_pfmsoft.dev_get_setup_args.md
changelog.d/templates/: entry_title_template.md.j2  new_fragment.md.j2
dev_docs/: workflow.md
scripts/: esi_pkce_auth_example.py  get-token.py  get_auth_code.py
src/esi_auth/: __init__.py  api.py  auth.py  auth_helpers.py  auth_provider.py  authenticate_esi.py  authenticator.py  credential_storage.py  esi_auth.py  esi_auth_store.py  helpers.py  make_safe_env_name.py  models.py  protocols.py  settings.py  simple_json_store.py  storage.py  token_storage.py  validate_jwt.py
src/esi_auth/cli/: __init__.py  app_credentials.py  auth_cli.py  auth_token.py  cli_helpers.py  config_info.py  credential_store_cli.py  credentials.py  helpers.py  main_typer.py  oauth_settings.py  token_store_cli.py  user_agent_cli.py  util_cli.py
src/esi_auth/eve_example/: authorization-code-pkce.py  validate-jwt-token.py
src/esi_auth/helpers/: code_challenge.py  metadata_helpers.py
src/esi_auth/old/: __init__.py  auth.py  auth_helpers.py  old_api.py  old_auth.py  old_models.py  old_settings.py  old_storage.py  storage.py
src/esi_auth/old/cli/: __init__.py  cli_helpers.py  main_typer.py  token_store_cli.py  util_cli.py
src/esi_auth/v2/: __init__.py  models.py  protocols.py  settings.py  simple_json_store.py
src/esi_auth/v2/cli/: app_credentials.py  auth_token.py  helpers.py  main_typer.py  oauth_settings.py
tests/: conftest.py  test_api.py  test_models.py  test_storage.py
tests/esi_auth/: __init__.py
tests/esi_auth/auth/: test_auth_helper_get_token.py  test_test_env_loaded.py  test_user_agent.py
tests/fixtures/: test.environment
tests/old/: __init__.py  conftest.py  test_api.py  test_models.py  test_storage.py
